--- a/www/view/Main.view.xml
+++ b/www/view/Main.view.xml
@@ -1,6 +1,66 @@
-<core:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="Reader1.view.Main"
-	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="Title">
-		<content></content>
-	</Page>
+<core:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns:html="http://www.w3.org/1999/xhtml" xmlns="sap.m"
+           controllerName="Reader1.view.Main">
+    <Page title="Title" showNavButton="false">
+        <customHeader>
+            <Bar>
+                <contentLeft>
+                    <MenuButton icon="sap-icon://menu2">
+                        <menu>
+                            <Menu>
+                                <items>
+                                    <MenuItem text="Category1"/>
+                                    <MenuItem text="Category2">
+                                        <items>
+                                            <MenuItem text="Article1"/>
+                                            <MenuItem text="Article2"/>
+                                        </items>
+                                    </MenuItem>
+                                </items>
+                            </Menu>
+                        </menu>
+                    </MenuButton>
+
+                </contentLeft>
+                <contentMiddle>
+                    <Text text="Reader"></Text>
+                </contentMiddle>
+                <contentRight>
+                    <MenuButton icon="sap-icon://user-settings">
+                        <menu>
+                            <Menu itemSelected="onMenuAction">
+                                <items>
+                                    <MenuItem text="Settings" icon="sap-icon://action-settings"/>
+                                    <MenuItem text="Logout"/>
+                                </items>
+                            </Menu>
+                        </menu>
+                    </MenuButton>
+                </contentRight>
+            </Bar>
+        </customHeader>
+        <content></content>
+        <footer>
+            <Bar>
+                <contentLeft>
+                    <MenuButton icon="sap-icon://zoom-in">
+                        <menu>
+                            <Menu>
+                                <items>
+                                    <MenuItem text="Zoom In" icon="sap-icon://zoom-in"/>
+                                    <MenuItem text="Zoom Out" icon="sap-icon://zoom-out" />
+                                </items>
+                            </Menu>
+                        </menu>
+                    </MenuButton>
+                    <Button icon="sap-icon://search" />
+                    <Button icon="sap-icon://bookmark" />
+                    <Button icon="sap-icon://share-2" />
+
+                </contentLeft>
+                <contentRight>
+                    <Button icon="sap-icon://full-screen" />
+                </contentRight>
+            </Bar>
+        </footer>
+    </Page>
 </core:View>
