--- a/www/view/Main.view.xml
+++ b/www/view/Main.view.xml
@@ -40,19 +40,7 @@
             </Bar>
         </customHeader>
         <content>
-           <!---core:HTML  id="html1" content="&lt;p&gt;Hello World&lt;/p&gt;" /-->
-            <Carousel loop="true"  id="gallery">
-                <pages>
-                    <Image src="img/1.jpg"/>
-                    <Image src="img/2.jpg"/>
-                    <Image src="img/3.jpg"/>
-                    <Image src="img/4.jpg"/>
-                    <Image src="img/5.jpg"/>
-                </pages>
-            </Carousel>
-            <html:div visible="false" id="content" >
-            	
-            </html:div>
+            <Panel id="_panelContent"></Panel>
         </content>
         <footer>
             <Bar>
